charts/mediaserver/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
    app.kubernetes.io/name: sabnzbd
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd
      app.kubernetes.io/name: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
        app.kubernetes.io/name: sabnzbd
    spec:
      containers:
        - name: sabnzbd
          image: "docker.io/linuxserver/sabnzbd:4.5.5"
          imagePullPolicy: IfNotPresent
          readinessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 30
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
          ports:
            - name: sabnzbd-http
              containerPort: 8080
              protocol: TCP
            - name: sabnzbd-https
              containerPort: 9090
              protocol: TCP
          volumeMounts:
            - name: mediaserver-volume
              mountPath: "/config"
              subPath: "config/sabnzbd"
            - name: mediaserver-volume
              mountPath: "/downloads"
              subPath: "downloads"
      volumes:
        - name: mediaserver-volume
          hostPath:
            path: /mnt/media
        - name: init-files-sabnzbd
          configMap:
            defaultMode: 493
            name: init-sabnzbd-cm
