charts/mediaserver/sabnzbd/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-https
  labels:
    app: sabnzbd
spec:
  type: ClusterIP
  ports:
    - port: 9090
      targetPort: 8080
      protocol: TCP
      name: sabnzbd-https
  selector:
    app: sabnzbd
---
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  labels:
    app: sabnzbd
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: sabnzbd-http
  selector:
    app: sabnzbd
