charts/mediaserver/sabnzbd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
  hostnames:
    - sabnzbd.int.imdevinc.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: sabnzbd
          namespace: mediaserver
          port: 8080
